# trimos-dash

./: .gitignore  Makefile  README.md  custom.css  physdash.md  pyproject.toml
calculators/: main.py
mode_solver/: __init__.py  main.py  potential.py  results.py  solver.py
mode_solver_dashboard/: plotter.py
physdash/: main.py
physdash/mode_solver/: ions.py  main.py  plotter.py
settings/: mode_solver_settings.json
trimos_dash/: ions.py  main.py  plotter.py
