[tool.poetry]
name = "trimos_dash"
version = "0.1.0"
description = "A dashboard for to visualize normal modes of trapped ions"
authors = ["Carmelo Mordini <cmordini@phys.ethz.ch>"]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
slapdash = "^1.0.1"
matplotlib = "^3.7.1"
pyqt5 = "^5.15.9"
trimos = {git = "https://github.com/carmelom/trimos.git"}

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
flake8 = "^4.0.1"

[tool.poetry.scripts]
trimos_dash = "trimos_dash.main:main"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
